--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,6 +13,7 @@
     <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="<%= 'active' if current_page?(root_path) %>"><a href="<%= root_path %>">Home</a></li>
+        <li class="<%= 'active' if current_page?(snippets_path) %>"><a href="<%= snippets_path %>">Snippet Toolbox</a></li>
       </ul>
 
 
