--- a/app/views/snippets/index.html.erb
+++ b/app/views/snippets/index.html.erb
@@ -31,3 +31,94 @@
 <% unless current_page? sti_snippet_path %>
   <%= link_to 'Back to Snippet Toolbox', sti_snippet_path %>
 <% end %>
+
+
+
+
+
+
+<div class = "panel-group" id = "accordion">
+   <div class = "panel panel-default">
+
+      <div class = "panel-heading">
+         <h4 class = "panel-title">
+            <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseOne">
+               Languages
+            </a>
+         </h4>
+      </div>
+
+      <div id = "collapseOne" class = "panel-collapse collapse in">
+         <div class="panel-body">
+           <% @languages.each do |language| %>
+            <div class="well well-sm" draggable="true">
+              <h3> <%= language.name %> </h3>
+               <ul>
+                 <li><%= language.properties.language %></li>
+                 <li><%= language.properties.level %></li>
+               </ul>
+           </div>
+           <% end %>
+         </div>
+      </div>
+
+   </div>
+
+   <div class = "panel panel-default">
+      <div class = "panel-heading">
+         <h4 class = "panel-title">
+            <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseTwo">
+               Accomplishments
+            </a>
+         </h4>
+      </div>
+
+      <div id = "collapseTwo" class = "panel-collapse collapse">
+        <div class="panel-body">
+          <% @accomplishments.each do |accomplishment| %>
+           <div class="well well-sm" draggable="true">
+             <h3> <%= accomplishment.name %> </h3>
+              <ul>
+                <li><%= accomplishment.properties.accomplishment %></li>
+                <li><%= accomplishment.properties.description %></li>
+              </ul>
+          </div>
+          <% end %>
+        </div>
+      </div>
+
+   </div>
+
+   <div class = "panel panel-default">
+      <div class = "panel-heading">
+         <h4 class = "panel-title">
+            <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseThree">
+               Details
+            </a>
+         </h4>
+      </div>
+
+      <div id = "collapseThree" class = "panel-collapse collapse">
+        <div class="panel-body">
+          <% @details.each do |detail| %>
+           <div class="well well-sm" draggable="true">
+             <h3> <%= detail.name %> </h3>
+              <ul>
+                <li><%= detail.properties.first_name %></li>
+                <li><%= detail.properties.last_name %></li>
+                <li><%= detail.properties.address %></li>
+                <li><%= detail.properties.address2 %></li>
+                <li><%= detail.properties.zipcode %></li>
+                <li><%= detail.properties.phone %></li>
+                <li><%= detail.properties.email %></li>
+                <li><%= detail.properties.linkedin %></li>
+                <li><%= detail.properties.github %></li>
+                <li><%= detail.properties.other %></li>
+              </ul>
+          </div>
+          <% end %>
+        </div>
+      </div>
+
+   </div>
+</div>
