add snippet accordion, edit name of app on main page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="<%= root_path %>"><i class="fa fa-leaf" aria-hidden="true" style="color: #18BC9C"></i> ResuMate</a>
+      <a class="navbar-brand" href="<%= root_path %>"><i class="fa fa-leaf" aria-hidden="true" style="color: #18BC9C"></i> ResuMix</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
