--- a/app/views/snippets/forms/_educationform.html.erb
+++ b/app/views/snippets/forms/_educationform.html.erb
@@ -2,7 +2,7 @@
   <%= ff.input :title, required: false %>
   <%= ff.input :institution, required: false %>
   <%= ff.input :location, required: false %>
-  <%= ff.input :start_date, required: false, html5: true %>
+  <%= ff.input :start_date, required: false %>
   <%= ff.input :end_date, as: :date, start_year: Date.today.year - 30,
                               end_year: Date.today.year, discard_day: true,
                               order: [:month, :year], required: false %>
