--- a/app/views/snippets/lists/_educations.html.erb
+++ b/app/views/snippets/lists/_educations.html.erb
@@ -1,30 +1,34 @@
 <div class = "panel panel-default">
-   <div class = "panel-heading">
-      <h4 class = "panel-title">
-         <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseThree">
-            Education Snippets
-         </a>
-      </h4>
-   </div>
+  <div class = "panel-heading">
+    <h4 class = "panel-title">
+      <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseThree">
+        Education Snippets
+      </a>
+    </h4>
+  </div>
 
-   <div id = "collapseThree" class = "panel-collapse collapse">
-     <div class="panel-body">
-       <% @educations.each do |education| %>
+  <div id = "collapseThree" class = "panel-collapse collapse">
+    <div class="add_new_button">
+      <%= link_to 'Add new Education', new_education_path, class: "btn btn-block btn-info" %>
+    </div>
+    <div class="panel-body">
+      <% @educations.each do |education| %>
         <div class="well well-sm" draggable="true">
           <h3> <%= education.name %> </h3>
-           <ul>
-             <li><%= education.properties.title %></li>
-             <li><%= education.properties.institution %></li>
-             <li><%= education.properties.location %></li>
-             <li><%= education.properties.start_date %></li>
-             <li><%= education.properties.end_date %></li>
-             <li><%= education.properties.details %></li>
-           </ul>
-           <%= link_to 'Edit', sti_snippet_path(education.type, education.id, :edit), class: "btn btn-xs btn-primary" %>
-           <%= link_to 'Destroy', sti_snippet_path(education.type, education.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-primary" %>
-       </div>
-       <% end %>
-     </div>
-   </div>
+          <ul>
+            <% education.properties.to_hash.each do |prop, value| %>
+              <% unless value == "" || value == nil %>
+                <li><span class="snippet-title"><%= prop.capitalize %></span>: <%= value %></li>
+              <% end %>
+            <% end %>
+          </ul>
+          <div class="snippet-controls">
+            <%= link_to 'Edit', sti_snippet_path(education.type, education.id, :edit), class: "btn btn-xs btn-warning" %>
+            <%= link_to 'Destroy', sti_snippet_path(education.type, education.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-danger" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
 
 </div>
