--- a/app/views/snippets/lists/_experiences.html.erb
+++ b/app/views/snippets/lists/_experiences.html.erb
@@ -1,30 +1,34 @@
 <div class = "panel panel-default">
-   <div class = "panel-heading">
-      <h4 class = "panel-title">
-         <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseFour">
-            Experience Snippets
-         </a>
-      </h4>
-   </div>
+  <div class = "panel-heading">
+    <h4 class = "panel-title">
+      <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseFour">
+        Experience Snippets
+      </a>
+    </h4>
+  </div>
 
-   <div id = "collapseFour" class = "panel-collapse collapse">
-     <div class="panel-body">
-       <% @experiences.each do |experience| %>
+  <div id = "collapseFour" class = "panel-collapse collapse">
+    <div class="add_new_button">
+      <%= link_to 'Add new Experience', new_experience_path, class: "btn btn-block btn-info" %>
+    </div>
+    <div class="panel-body">
+      <% @experiences.each do |experience| %>
         <div class="well well-sm" draggable="true">
           <h3> <%= experience.name %> </h3>
-           <ul>
-             <li><%= experience.properties.title %></li>
-             <li><%= experience.properties.organization %></li>
-             <li><%= experience.properties.location %></li>
-             <li><%= experience.properties.start_date %></li>
-             <li><%= experience.properties.end_date %></li>
-             <li><%= experience.properties.details %></li>
-           </ul>
-           <%= link_to 'Edit', sti_snippet_path(experience.type, experience.id, :edit), class: "btn btn-xs btn-primary" %>
-           <%= link_to 'Destroy', sti_snippet_path(experience.type, experience.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-primary" %>
-       </div>
-       <% end %>
-     </div>
-   </div>
+          <ul>
+            <% experience.properties.to_hash.each do |prop, value| %>
+              <% unless value == "" || value == nil %>
+                <li><span class="snippet-title"><%= prop.capitalize %></span>: <%= value %></li>
+              <% end %>
+            <% end %>
+          </ul>
+          <div class="snippet-controls">
+            <%= link_to 'Edit', sti_snippet_path(experience.type, experience.id, :edit), class: "btn btn-xs btn-warning" %>
+            <%= link_to 'Destroy', sti_snippet_path(experience.type, experience.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-danger" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
 
 </div>
