--- a/app/views/snippets/lists/_interests.html.erb
+++ b/app/views/snippets/lists/_interests.html.erb
@@ -1,26 +1,34 @@
 <div class = "panel panel-default">
-   <div class = "panel-heading">
-      <h4 class = "panel-title">
-         <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseFive">
-            Interest Snippets
-         </a>
-      </h4>
-   </div>
+  <div class = "panel-heading">
+    <h4 class = "panel-title">
+      <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseFive">
+        Interest Snippets
+      </a>
+    </h4>
+  </div>
 
-   <div id = "collapseFive" class = "panel-collapse collapse">
-     <div class="panel-body">
-       <% @interests.each do |interest| %>
+  <div id = "collapseFive" class = "panel-collapse collapse">
+    <div class="add_new_button">
+      <%= link_to 'Add new Interest', new_interest_path, class: "btn btn-block btn-info" %>
+    </div>
+    <div class="panel-body">
+      <% @interests.each do |interest| %>
         <div class="well well-sm" draggable="true">
           <h3> <%= interest.name %> </h3>
-           <ul>
-             <li><%= interest.properties.interest %></li>
-             <li><%= interest.properties.description %></li>
-           </ul>
-           <%= link_to 'Edit', sti_snippet_path(interest.type, interest.id, :edit), class: "btn btn-xs btn-primary" %>
-           <%= link_to 'Destroy', sti_snippet_path(interest.type, interest.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-primary" %>
-       </div>
-       <% end %>
-     </div>
-   </div>
+          <ul>
+            <% interest.properties.to_hash.each do |prop, value| %>
+              <% unless value == "" || value == nil %>
+                <li><span class="snippet-title"><%= prop.capitalize %></span>: <%= value %></li>
+              <% end %>
+            <% end %>
+          </ul>
+          <div class="snippet-controls">
+            <%= link_to 'Edit', sti_snippet_path(interest.type, interest.id, :edit), class: "btn btn-xs btn-warning" %>
+            <%= link_to 'Destroy', sti_snippet_path(interest.type, interest.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-danger" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
 
 </div>
