--- a/app/views/snippets/lists/_references.html.erb
+++ b/app/views/snippets/lists/_references.html.erb
@@ -1,29 +1,34 @@
 <div class = "panel panel-default">
-   <div class = "panel-heading">
-      <h4 class = "panel-title">
-         <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseEight">
-            Reference Snippets
-         </a>
-      </h4>
-   </div>
+  <div class = "panel-heading">
+    <h4 class = "panel-title">
+      <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseEight">
+        Reference Snippets
+      </a>
+    </h4>
+  </div>
 
-   <div id = "collapseEight" class = "panel-collapse collapse">
-     <div class="panel-body">
-       <% @endorsements.each do |endorsement| %>
+  <div id = "collapseEight" class = "panel-collapse collapse">
+    <div class="add_new_button">
+      <%= link_to 'Add new Reference', new_endorsement_path, class: "btn btn-block btn-info" %>
+    </div>
+    <div class="panel-body">
+      <% @endorsements.each do |endorsement| %>
         <div class="well well-sm" draggable="true">
           <h3> <%= endorsement.name %> </h3>
-           <ul>
-             <li><%= endorsement.properties.fullname %></li>
-             <li><%= endorsement.properties.position %></li>
-             <li><%= endorsement.properties.company %></li>
-             <li><%= endorsement.properties.email %></li>
-             <li><%= endorsement.properties.phone %></li>
-           </ul>
-           <%= link_to 'Edit', sti_snippet_path(endorsement.type, endorsement.id, :edit), class: "btn btn-xs btn-primary" %>
-           <%= link_to 'Destroy', sti_snippet_path(endorsement.type, endorsement.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-primary" %>
-       </div>
-       <% end %>
-     </div>
-   </div>
+          <ul>
+            <% endorsement.properties.to_hash.each do |prop, value| %>
+              <% unless value == "" || value == nil %>
+                <li><span class="snippet-title"><%= prop.capitalize %></span>: <%= value %></li>
+              <% end %>
+            <% end %>
+          </ul>
+          <div class="snippet-controls">
+            <%= link_to 'Edit', sti_snippet_path(endorsement.type, endorsement.id, :edit), class: "btn btn-xs btn-warning" %>
+            <%= link_to 'Destroy', sti_snippet_path(endorsement.type, endorsement.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-danger" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
 
 </div>
