--- a/app/views/snippets/lists/_summary.html.erb
+++ b/app/views/snippets/lists/_summary.html.erb
@@ -1,25 +1,34 @@
 <div class = "panel panel-default">
-   <div class = "panel-heading">
-      <h4 class = "panel-title">
-         <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseTen">
-            Summary Snippets
-         </a>
-      </h4>
-   </div>
+  <div class = "panel-heading">
+    <h4 class = "panel-title">
+      <a data-toggle = "collapse" data-parent = "#accordion" href = "#collapseTen">
+        Summary Snippets
+      </a>
+    </h4>
+  </div>
 
-   <div id = "collapseTen" class = "panel-collapse collapse">
-     <div class="panel-body">
-       <% @summaries.each do |summary| %>
+  <div id = "collapseTen" class = "panel-collapse collapse">
+    <div class="add_new_button">
+      <%= link_to 'Add new Summary', new_summary_path, class: "btn btn-block btn-info" %>
+    </div>
+    <div class="panel-body">
+      <% @summaries.each do |summary| %>
         <div class="well well-sm" draggable="true">
           <h3> <%= summary.name %> </h3>
-           <ul>
-             <li><%= summary.properties.description %></li>
-           </ul>
-           <%= link_to 'Edit', sti_snippet_path(summary.type, summary.id, :edit), class: "btn btn-xs btn-primary" %>
-           <%= link_to 'Destroy', sti_snippet_path(summary.type, summary.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-primary" %>
-       </div>
-       <% end %>
-     </div>
-   </div>
+          <ul>
+            <% summary.properties.to_hash.each do |prop, value| %>
+              <% unless value == "" || value == nil %>
+                <li><span class="snippet-title"><%= prop.capitalize %></span>: <%= value %></li>
+              <% end %>
+            <% end %>
+          </ul>
+          <div class="snippet-controls">
+            <%= link_to 'Edit', sti_snippet_path(summary.type, summary.id, :edit), class: "btn btn-xs btn-warning" %>
+            <%= link_to 'Destroy', sti_snippet_path(summary.type, summary.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-danger" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
 
 </div>
