--- a/app/views/snippets/lists/_details.html.erb
+++ b/app/views/snippets/lists/_details.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div class="panel-body">
       <% @details.each do |detail| %>
-        <div class="well well-sm" draggable="true">
+        <div class="well well-sm" draggable="true" id="<%= dom_id(detail) %>">
           <h3> <%= detail.name %> </h3>
           <ul>
             <% detail.properties.to_hash.each do |prop, value| %>
@@ -24,7 +24,11 @@
           </ul>
           <div class="snippet-controls">
             <%= link_to 'Edit', sti_snippet_path(detail.type, detail.id, :edit), class: "btn btn-xs btn-warning" %>
-            <%= link_to 'Destroy', sti_snippet_path(detail.type, detail.id), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-danger" %>
+            <%= link_to 'Delete', sti_snippet_path(detail.type, detail.id),
+                                  method: :delete,
+                                  data: { confirm: 'Are you sure?' },
+                                  class: "btn btn-xs btn-danger",
+                                  remote: true %>
           </div>
         </div>
       <% end %>
