make each individual snippet a partial

--- a/app/views/snippets/lists/_languages.html.erb
+++ b/app/views/snippets/lists/_languages.html.erb
@@ -13,24 +13,7 @@
     </div>
     <div class="panel-body">
       <% @languages.each do |language| %>
-        <div class="well well-sm" draggable="true" id="<%= dom_id(language) %>">
-          <h3> <%= language.name %> </h3>
-          <ul>
-            <% language.properties.to_hash.each do |prop, value| %>
-              <% unless value == "" || value == nil %>
-                <li><span class="snippet-title"><%= prop.capitalize %></span>: <%= value %></li>
-              <% end %>
-            <% end %>
-          </ul>
-          <div class="snippet-controls">
-            <%= link_to 'Edit', sti_snippet_path(language.type, language.id, :edit), class: "btn btn-xs btn-warning" %>
-            <%= link_to 'Delete', sti_snippet_path(language.type, language.id),
-                                  method: :delete,
-                                  data: { confirm: 'Are you sure?' },
-                                  class: "btn btn-xs btn-danger",
-                                  remote: true %>
-          </div>
-        </div>
+        <%= render 'snippets/snippet/language', language: language %>
       <% end %>
     </div>
   </div>
