add modal ajax to edit/update snippet toolbox items, add mouseover to open panel on snippet toolbox, change gradient of navbar

--- a/app/views/snippets/blocks/_accomplishments.html.erb
+++ b/app/views/snippets/blocks/_accomplishments.html.erb
@@ -11,7 +11,7 @@
     <div class="add_new_button">
       <%= link_to 'Add new Accomplishment', new_accomplishment_path, class: "btn btn-block btn-info" %>
     </div>
-    <div class="panel-body">
+    <div class="panel-body" id="accomplishments">
       <% @accomplishments.each do |accomplishment| %>
         <%= render 'snippets/snippet/accomplishment', accomplishment: accomplishment %>
       <% end %>
