--- a/app/views/snippets/blocks/_skills.html.erb
+++ b/app/views/snippets/blocks/_skills.html.erb
@@ -11,7 +11,7 @@
     <div class="add_new_button">
       <%= link_to 'Add new Skill', new_skill_path, class: "btn btn-block btn-info" %>
     </div>
-    <div class="panel-body">
+    <div class="panel-body" id="skills">
       <% @skills.each do |skill| %>
         <%= render 'snippets/snippet/skill', skill: skill %>
       <% end %>
