--- a/app/views/snippets/blocks/_experiences.html.erb
+++ b/app/views/snippets/blocks/_experiences.html.erb
@@ -11,7 +11,7 @@
     <div class="add_new_button">
       <%= link_to 'Add new Experience', new_experience_path, class: "btn btn-block btn-info" %>
     </div>
-    <div class="panel-body">
+    <div class="panel-body" id="experiences">
       <% @experiences.each do |experience| %>
         <%= render 'snippets/snippet/experience', experience: experience %>
       <% end %>
