--- a/app/views/snippets/blocks/_interests.html.erb
+++ b/app/views/snippets/blocks/_interests.html.erb
@@ -11,7 +11,7 @@
     <div class="add_new_button">
       <%= link_to 'Add new Interest', new_interest_path, class: "btn btn-block btn-info" %>
     </div>
-    <div class="panel-body">
+    <div class="panel-body" id="interests">
       <% @interests.each do |interest| %>
         <%= render 'snippets/snippet/interest', interest: interest %>
       <% end %>
