--- a/app/views/snippets/snippet/_detail.html.erb
+++ b/app/views/snippets/snippet/_detail.html.erb
@@ -8,7 +8,10 @@
     <% end %>
   </ul>
   <div class="snippet-controls">
-    <%= link_to 'Edit', sti_snippet_path(detail.type, detail.id, :edit), class: "btn btn-xs btn-warning" %>
+    <%= link_to 'Edit', sti_snippet_path(detail.type, detail.id, :edit),
+                        remote: true,
+                        data: {toggle: "modal", target: "#edit-snippet"},
+                        class: "btn btn-xs btn-warning" %>
     <%= link_to 'Delete', sti_snippet_path(detail.type, detail.id),
                           method: :delete,
                           data: { confirm: 'Are you sure?' },
