add ajax for new snippet on toolbox

--- a/app/views/snippets/blocks/_experiences.html.erb
+++ b/app/views/snippets/blocks/_experiences.html.erb
@@ -9,7 +9,10 @@
 
   <div id = "collapseFour" class = "panel-collapse collapse">
     <div class="add_new_button">
-      <%= link_to 'Add new Experience', new_experience_path, class: "btn btn-block btn-info" %>
+      <%= link_to 'Add new Experience', new_experience_path,
+                                        remote: true,
+                                        data: {toggle: "modal", target: "#new-snippet"},
+                                        class: "btn btn-block btn-info" %>
     </div>
     <div class="panel-body" id="experiences">
       <% @experiences.each do |experience| %>
