--- a/app/views/snippets/blocks/_accomplishments.html.erb
+++ b/app/views/snippets/blocks/_accomplishments.html.erb
@@ -9,7 +9,10 @@
 
   <div id = "collapseOne" class = "panel-collapse collapse">
     <div class="add_new_button">
-      <%= link_to 'Add new Accomplishment', new_accomplishment_path, class: "btn btn-block btn-info" %>
+      <%= link_to 'Add new Accomplishment', new_accomplishment_path,
+                                            remote: true,
+                                            data: {toggle: "modal", target: "#new-snippet"},
+                                            class: "btn btn-block btn-info" %>
     </div>
     <div class="panel-body" id="accomplishments">
       <% @accomplishments.each do |accomplishment| %>
