--- a/app/views/snippets/blocks/_interests.html.erb
+++ b/app/views/snippets/blocks/_interests.html.erb
@@ -9,7 +9,10 @@
 
   <div id = "collapseFive" class = "panel-collapse collapse">
     <div class="add_new_button">
-      <%= link_to 'Add new Interest', new_interest_path, class: "btn btn-block btn-info" %>
+      <%= link_to 'Add new Interest', new_interest_path,
+                                      remote: true,
+                                      data: {toggle: "modal", target: "#new-snippet"},
+                                      class: "btn btn-block btn-info" %>
     </div>
     <div class="panel-body" id="interests">
       <% @interests.each do |interest| %>
