--- a/app/views/snippets/blocks/_languages.html.erb
+++ b/app/views/snippets/blocks/_languages.html.erb
@@ -9,7 +9,10 @@
 
   <div id = "collapseSix" class = "panel-collapse collapse">
     <div class="add_new_button">
-      <%= link_to 'Add new Language', new_language_path, class: "btn btn-block btn-info" %>
+      <%= link_to 'Add new Language', new_language_path,
+                                      remote: true,
+                                      data: {toggle: "modal", target: "#new-snippet"},
+                                      class: "btn btn-block btn-info" %>
     </div>
     <div class="panel-body" id="languages">
       <% @languages.each do |language| %>
