--- a/app/views/snippets/blocks/_references.html.erb
+++ b/app/views/snippets/blocks/_references.html.erb
@@ -9,7 +9,10 @@
 
   <div id = "collapseEight" class = "panel-collapse collapse">
     <div class="add_new_button">
-      <%= link_to 'Add new Reference', new_endorsement_path, class: "btn btn-block btn-info" %>
+      <%= link_to 'Add new Reference', new_endorsement_path,
+                                        remote: true,
+                                        data: {toggle: "modal", target: "#new-snippet"},
+                                        class: "btn btn-block btn-info" %>
     </div>
     <div class="panel-body" id="references">
       <% @endorsements.each do |endorsement| %>
