--- a/app/views/snippets/blocks/_summary.html.erb
+++ b/app/views/snippets/blocks/_summary.html.erb
@@ -9,7 +9,10 @@
 
   <div id = "collapseTen" class = "panel-collapse collapse">
     <div class="add_new_button">
-      <%= link_to 'Add new Summary', new_summary_path, class: "btn btn-block btn-info" %>
+      <%= link_to 'Add new Summary', new_summary_path,
+                                      remote: true,
+                                      data: {toggle: "modal", target: "#new-snippet"},
+                                      class: "btn btn-block btn-info" %>
     </div>
     <div class="panel-body" id="summaries">
       <% @summaries.each do |summary| %>
