--- a/app/views/snippets/index.html.erb
+++ b/app/views/snippets/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Resume Snippets Toolbox</h1>
+<h1 id="resume">Resume Snippets Toolbox</h1>
 <%= link_to "Add New Snippet", new_snippet_path, class: "btn btn-xs btn-primary" %>
 <div class="row">
   <div class="col-md-6">
@@ -18,13 +18,32 @@
 </div>
 
 
-<!-- Modal -->
+<!-- Edit Snippet Modal -->
 <div class="modal fade" id="edit-snippet" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title" id="myModalLabel">Edit Snippet</h4>
+      </div>
+      <div class="modal-body">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- New Snippet Modal -->
+<div class="modal fade" id="new-snippet" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Add New Snippet</h4>
       </div>
       <div class="modal-body">
 
