add resumes controller, basic new view with drop area, changed snippet accordion design a bit to make more compact

--- a/app/views/snippets/blocks/_others.html.erb
+++ b/app/views/snippets/blocks/_others.html.erb
@@ -12,7 +12,7 @@
       <%= link_to 'Add new Other', new_other_path,
                                     remote: true,
                                     data: {toggle: "modal", target: "#new-snippet"},
-                                    class: "btn btn-block btn-info" %>
+                                    class: "btn btn-block btn-info btn-add-snippet" %>
     </div>
     <div class="panel-body" id="others">
       <% @others.each do |other| %>
