--- a/app/views/snippets/blocks/_details.html.erb
+++ b/app/views/snippets/blocks/_details.html.erb
@@ -12,7 +12,7 @@
       <%= link_to 'Add new Detail', new_detail_path,
                                     remote: true,
                                     data: {toggle: "modal", target: "#new-snippet"},
-                                    class: "btn btn-block btn-info" %>
+                                    class: "btn btn-block btn-info btn-add-snippet" %>
     </div>
     <div class="panel-body" id="details">
       <% @details.each do |detail| %>
