--- a/app/views/snippets/blocks/_experiences.html.erb
+++ b/app/views/snippets/blocks/_experiences.html.erb
@@ -12,7 +12,7 @@
       <%= link_to 'Add new Experience', new_experience_path,
                                         remote: true,
                                         data: {toggle: "modal", target: "#new-snippet"},
-                                        class: "btn btn-block btn-info" %>
+                                        class: "btn btn-block btn-info btn-add-snippet" %>
     </div>
     <div class="panel-body" id="experiences">
       <% @experiences.each do |experience| %>
