--- a/app/views/snippets/blocks/_interests.html.erb
+++ b/app/views/snippets/blocks/_interests.html.erb
@@ -12,7 +12,7 @@
       <%= link_to 'Add new Interest', new_interest_path,
                                       remote: true,
                                       data: {toggle: "modal", target: "#new-snippet"},
-                                      class: "btn btn-block btn-info" %>
+                                      class: "btn btn-block btn-info btn-add-snippet" %>
     </div>
     <div class="panel-body" id="interests">
       <% @interests.each do |interest| %>
