--- a/app/views/snippets/blocks/_languages.html.erb
+++ b/app/views/snippets/blocks/_languages.html.erb
@@ -12,7 +12,7 @@
       <%= link_to 'Add new Language', new_language_path,
                                       remote: true,
                                       data: {toggle: "modal", target: "#new-snippet"},
-                                      class: "btn btn-block btn-info" %>
+                                      class: "btn btn-block btn-info btn-add-snippet" %>
     </div>
     <div class="panel-body" id="languages">
       <% @languages.each do |language| %>
