--- a/app/views/snippets/blocks/_references.html.erb
+++ b/app/views/snippets/blocks/_references.html.erb
@@ -12,7 +12,7 @@
       <%= link_to 'Add new Reference', new_endorsement_path,
                                         remote: true,
                                         data: {toggle: "modal", target: "#new-snippet"},
-                                        class: "btn btn-block btn-info" %>
+                                        class: "btn btn-block btn-info btn-add-snippet" %>
     </div>
     <div class="panel-body" id="references">
       <% @endorsements.each do |endorsement| %>
