--- a/app/views/snippets/blocks/_summary.html.erb
+++ b/app/views/snippets/blocks/_summary.html.erb
@@ -12,7 +12,7 @@
       <%= link_to 'Add new Summary', new_summary_path,
                                       remote: true,
                                       data: {toggle: "modal", target: "#new-snippet"},
-                                      class: "btn btn-block btn-info" %>
+                                      class: "btn btn-block btn-info btn-add-snippet" %>
     </div>
     <div class="panel-body" id="summaries">
       <% @summaries.each do |summary| %>
