--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <div class="col-md-offset-1 col-md-5">
-<h2> Resume Toolbox</h2>
+<h2> Resume Snippets</h2>
   <div class="panel-group" id="accordion">
     <%= render 'snippets/blocks/accomplishments' %>
     <%= render 'snippets/blocks/details' %>
@@ -16,5 +16,44 @@
     <%= render 'snippets/blocks/references' %>
     <%= render 'snippets/blocks/skills' %>
     <%= render 'snippets/blocks/summary' %>
+  </div>
+</div>
+
+
+<!-- Edit Snippet Modal -->
+<div class="modal fade" id="edit-snippet" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Edit Snippet</h4>
+      </div>
+      <div class="modal-body">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- New Snippet Modal -->
+<div class="modal fade" id="new-snippet" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Add New Snippet</h4>
+      </div>
+      <div class="modal-body">
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
   </div>
 </div>
