add first version of drag and drop

--- a/app/views/snippets/snippet/_accomplishment.html.erb
+++ b/app/views/snippets/snippet/_accomplishment.html.erb
@@ -1,4 +1,4 @@
-<div class="well well-sm well-snippet" draggable="true" id="<%= dom_id(accomplishment) %>">
+<div class="well well-sm well-snippet" id="<%= dom_id(accomplishment) %>">
   <div class="snippet-name"> <%= accomplishment.name %> </div>
   <ul>
     <% accomplishment.properties.to_hash.each do |prop, value| %>
