--- a/app/views/snippets/snippet/_detail.html.erb
+++ b/app/views/snippets/snippet/_detail.html.erb
@@ -1,4 +1,4 @@
-<div class="well well-sm well-snippet" draggable="true" id="<%= dom_id(detail) %>">
+<div class="well well-sm well-snippet" id="<%= dom_id(detail) %>">
   <div class="snippet-name"> <%= detail.name %> </div>
   <ul>
     <% detail.properties.to_hash.each do |prop, value| %>
