--- a/app/views/snippets/snippet/_language.html.erb
+++ b/app/views/snippets/snippet/_language.html.erb
@@ -1,4 +1,4 @@
-<div class="well well-sm well-snippet" draggable="true" id="<%= dom_id(language) %>">
+<div class="well well-sm well-snippet" id="<%= dom_id(language) %>">
   <div class="snippet-name"> <%= language.name %> </div>
   <ul>
     <% language.properties.to_hash.each do |prop, value| %>
