--- a/app/views/snippets/snippet/_other.html.erb
+++ b/app/views/snippets/snippet/_other.html.erb
@@ -1,4 +1,4 @@
-<div class="well well-sm well-snippet" draggable="true" id="<%= dom_id(other) %>">
+<div class="well well-sm well-snippet" id="<%= dom_id(other) %>">
   <div class="snippet-name"> <%= other.name %> </div>
   <ul>
     <% other.properties.to_hash.each do |prop, value| %>
