--- a/app/views/snippets/snippet/_reference.html.erb
+++ b/app/views/snippets/snippet/_reference.html.erb
@@ -1,4 +1,4 @@
-<div class="well well-sm well-snippet" draggable="true" id="<%= dom_id(endorsement) %>">
+<div class="well well-sm well-snippet" id="<%= dom_id(endorsement) %>">
   <div class="snippet-name"> <%= endorsement.name %> </div>
   <ul>
     <% endorsement.properties.to_hash.each do |prop, value| %>
