--- a/app/views/snippets/snippet/_skill.html.erb
+++ b/app/views/snippets/snippet/_skill.html.erb
@@ -1,4 +1,4 @@
-<div class="well well-sm well-snippet" draggable="true" id="<%= dom_id(skill) %>">
+<div class="well well-sm well-snippet" id="<%= dom_id(skill) %>">
   <div class="snippet-name"> <%= skill.name %> </div>
   <ul>
     <% skill.properties.to_hash.each do |prop, value| %>
