--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -1,6 +1,8 @@
 <div class="col-md-6">
 <h1 id="resume">Resume Builder</h1>
-<div id="resumebox"></div>
+<div class="resume-help"> Drag and drop the resume pieces you want to add on your resume and once ready click on the save button at the bottom!</div>
+<div id="trash"><i class="fa fa-2x fa-trash" aria-hidden="true"></i></div>
+<div id="resumebox"><div class="placeholder">Drag and drop your resume snippets here</div></div>
 </div>
 
 <div class="col-md-offset-1 col-md-5">
