--- a/app/views/snippets/snippet/_education.html.erb
+++ b/app/views/snippets/snippet/_education.html.erb
@@ -1,4 +1,4 @@
-<div class="well well-sm well-snippet" draggable="true" id="<%= dom_id(education) %>">
+<div class="well well-sm well-snippet" id="<%= dom_id(education) %>">
   <div class="snippet-name"> <%= education.name %> </div>
   <ul>
     <% education.properties.to_hash.each do |prop, value| %>
