--- a/app/views/snippets/snippet/_experience.html.erb
+++ b/app/views/snippets/snippet/_experience.html.erb
@@ -1,4 +1,4 @@
-<div class="well well-sm well-snippet" draggable="true" id="<%= dom_id(experience) %>">
+<div class="well well-sm well-snippet" id="<%= dom_id(experience) %>">
   <div class="snippet-name"> <%= experience.name %> </div>
   <ul>
     <% experience.properties.to_hash.each do |prop, value| %>
