--- a/app/views/snippets/snippet/_interest.html.erb
+++ b/app/views/snippets/snippet/_interest.html.erb
@@ -1,4 +1,4 @@
-<div class="well well-sm well-snippet" draggable="true" id="<%= dom_id(interest) %>">
+<div class="well well-sm well-snippet" id="<%= dom_id(interest) %>">
   <div class="snippet-name"> <%= interest.name %> </div>
   <ul>
     <% interest.properties.to_hash.each do |prop, value| %>
