remove add new snippet button, change layout to fluid

--- a/app/assets/stylesheets/resumes.scss
+++ b/app/assets/stylesheets/resumes.scss
@@ -17,6 +17,10 @@ h1#resume {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f5f6', endColorstr='#c8d7dc',GradientType=0 );
 }
 
+.snippets-accordion {
+  margin-left: 20px;
+}
+
 .placeholder {
   font-size: 2em;
   text-align: center;
