--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <div id="main-container" class="container">
+  <div id="main-container" class="container-fluid">
   <%= render 'shared/navbar' %>
   <div class="row">
 
