--- a/app/views/snippets/index.html.erb
+++ b/app/views/snippets/index.html.erb
@@ -1,8 +1,7 @@
 <h1 id="resume">Resume Snippets Toolbox</h1>
-<%= link_to "Add New Snippet", new_snippet_path, class: "btn btn-xs btn-primary" %>
 <div class="row">
-  <div class="col-md-6">
-    <div class = "panel-group" id = "accordion">
+  <div class="col-md-offset-3 col-md-6">
+    <div class = "panel-group snippets-accordion" id = "accordion">
       <%= render 'snippets/blocks/accomplishments' %>
       <%= render 'snippets/blocks/details' %>
       <%= render 'snippets/blocks/educations' %>
