--- a/app/views/snippets/snippet/_accomplishment.html.erb
+++ b/app/views/snippets/snippet/_accomplishment.html.erb
@@ -1,5 +1,5 @@
 <div class="well well-sm well-snippet" id="<%= dom_id(accomplishment) %>">
-  <div class="snippet-name"> <%= accomplishment.name %> </div>
+  <div class="snippet-name" data-id="<%= accomplishment.id %>"> <%= accomplishment.name %> </div>
   <ul>
     <% accomplishment.properties.to_hash.each do |prop, value| %>
       <% unless value == "" || value == nil %>
