--- a/app/views/snippets/snippet/_interest.html.erb
+++ b/app/views/snippets/snippet/_interest.html.erb
@@ -1,5 +1,5 @@
 <div class="well well-sm well-snippet" id="<%= dom_id(interest) %>">
-  <div class="snippet-name"> <%= interest.name %> </div>
+  <div class="snippet-name" data-id="<%= interest.id %>"> <%= interest.name %> </div>
   <ul>
     <% interest.properties.to_hash.each do |prop, value| %>
       <% unless value == "" || value == nil %>
