--- a/app/views/snippets/snippet/_other.html.erb
+++ b/app/views/snippets/snippet/_other.html.erb
@@ -1,5 +1,5 @@
 <div class="well well-sm well-snippet" id="<%= dom_id(other) %>">
-  <div class="snippet-name"> <%= other.name %> </div>
+  <div class="snippet-name" data-id="<%= other.id %>"> <%= other.name %> </div>
   <ul>
     <% other.properties.to_hash.each do |prop, value| %>
       <% unless value == "" || value == nil %>
