--- a/app/views/snippets/snippet/_education.html.erb
+++ b/app/views/snippets/snippet/_education.html.erb
@@ -1,5 +1,5 @@
 <div class="well well-sm well-snippet" id="<%= dom_id(education) %>">
-  <div class="snippet-name"> <%= education.name %> </div>
+  <div class="snippet-name" data-id="<%= education.id %>"> <%= education.name %> </div>
   <ul>
     <% education.properties.to_hash.each do |prop, value| %>
       <% unless value == "" || value == nil %>
