--- a/app/views/snippets/snippet/_language.html.erb
+++ b/app/views/snippets/snippet/_language.html.erb
@@ -1,5 +1,5 @@
 <div class="well well-sm well-snippet" id="<%= dom_id(language) %>">
-  <div class="snippet-name"> <%= language.name %> </div>
+  <div class="snippet-name" data-id="<%= language.id %>"> <%= language.name %> </div>
   <ul>
     <% language.properties.to_hash.each do |prop, value| %>
       <% unless value == "" || value == nil %>
